--- a/style.css
+++ b/style.css
@@ -1,154 +1,96 @@
-/*General*/
+/*GENERAL*/
 * {
+  font-family: sans-serif;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  font-family: Roboto, sans-serif;
 }
-/* body*/
+/*BODY*/
 body {
-  background-color: #03b1fb;
+  background: #12acee;
 }
-/*header*/
+/* HEADER */
 header {
-  background-color: white;
-  height: 90px;
-  line-height: 90px;
-  padding: 20px;
+  background: #fff;
+  padding: 24px 16px;
 }
-/*first container*/
+/* CONTAINER */
 .container {
-  background-color: white;
-  background-size: contain;
-  margin: 40px 400px 1.5px;
-  padding: 15px;
+  width: 55%;
+  background: #f9f6f9;
+  margin: 32px auto;
+  padding: 10px;
 }
-/*first button*/
-.button1 {
-  background-color: #03b1fb;
-  border-radius: 6px;
-  height: 28px;
-  width: 80px;
-  border: 2px solid #03b1fb;
-  color: white;
-  font-size: 12px;
+/* BUTTON */
+.button {
+  padding: 24px 16px;
+  border-bottom: 2px solid #12acee;
 }
-/*second button*/
-.button2 {
-  background-color: white;
-  border-radius: 6px;
-  height: 28px;
-  width: 100px;
-  border: 2px solid #03b1fb;
-  color: #03b1fb;
-  font-size: 12px;
+.btn {
+  padding: 8px 16px;
+  border-radius: 5px;
+  text-transform: uppercase;
 }
-/*hr*/
-hr {
-  background-color: #03b1fb;
-  height: 2px;
-  width: auto;
-}
-/* second container*/
-.container2 {
-  background-color: white;
-  background-size: contain;
-  margin: 0px 400px;
-  padding: 10px 10px 30px;
+.btn.filled {
+  background: #12acee;
+  color: #fff;
+  border: 1px solid #12acee;
 }
 
-.freccia {
-  font-size: 30px;
-  vertical-align: middle;
+.btn.outfilled {
+  border: 1px solid #12acee;
+  background: #fff;
+  color: #12acee;
 }
-
-.blue {
-  background-color: #03b1fb;
-  border-radius: 20px;
-  display: inline-block;
-  width: 70px;
-  height: 30px;
-  text-align: center;
-  margin-left: 5px;
-  line-height: 30px;
-  color: white;
-  font-size: 10px;
+/* TASK */
+li {
+  list-style: none; /* toglie il pallino dalla lista */
+  padding: 4px;
 }
-
-.viola {
-  background-color: #cd58f8de;
-  border-radius: 20px;
-  display: inline-block;
-  width: 70px;
-  height: 30px;
-  text-align: center;
-  margin-left: 5px;
-  line-height: 30px;
-  color: white;
-  font-size: 10px;
-}
-
-.verdea {
-  background-color: #03fbb5;
-  border-radius: 20px;
-  display: inline-block;
-  width: 70px;
-  height: 30px;
-  text-align: center;
-  margin-left: 5px;
-  line-height: 30px;
-  color: white;
-  font-size: 10px;
-}
-
-.arancione {
-  background-color: #fb8f03;
-  border-radius: 20px;
-  display: inline-block;
-  width: 70px;
-  height: 30px;
-  text-align: center;
-  margin-left: 5px;
-  line-height: 30px;
-  color: white;
-  font-size: 10px;
-}
-
-.rosa {
-  background-color: #fb03c9;
-  border-radius: 20px;
-  display: inline-block;
-  width: 70px;
-  height: 30px;
-  text-align: center;
-  margin-left: 5px;
-  line-height: 30px;
-  color: white;
-  font-size: 10px;
-}
-
-.verde {
-  background-color: #87fb03;
-  border-radius: 20px;
-  display: inline-block;
-  width: 70px;
-  height: 30px;
-  text-align: center;
-  margin-left: 5px;
-  line-height: 30px;
-  color: white;
-  font-size: 10px;
-}
-
-/* created circol */
 .circle {
-  margin-top: 10px;
-  width: 20px;
-  height: 20px;
-  line-height: 20px;
-  border: 1px solid black;
-  text-align: center;
-  border-radius: 50%;
   display: inline-block;
-  font-size: 15px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  line-height: 24px;
+  text-align: center;
+}
+.pill {
+  border-radius: 500px;
+  display: inline-block;
+  height: 24px;
+  line-height: 24px;
+  text-align: center;
+  background-color: #12acee;
+  padding: 0 16px;
+  color: white;
+}
+.check {
+  border: 1px solid green;
+  color: green;
+}
+.cross {
+  border: 1px solid red;
+  color: red;
+}
+
+.mt {
+}
+.blue {
+  background-color: #12acee;
+}
+.viola {
+  background-color: #9c72e4;
+}
+.arancione {
+  background-color: #f29e33;
+}
+.verde {
+  background-color: #64c0a9;
+}
+.rosa {
+  background-color: #d863a1;
+}
+.verdel {
+  background-color: #b0c926;
 }
